--- a/index.html
+++ b/index.html
@@ -5,9 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">    <title>Document</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <style>
+        .list-group {
+            display: flex;
+            flex-direction: column;
+            width: 300px;
+        }
+        .div-img-pan-tadeusz {
+            display: flex;
+            width: 600px;
+            margin-left: 485px;
+        }
+        .img-pan-tadeusz {
+            width: 900px;
+            height: 500px;
+            display: flex;
+        }
+        .general {
+            display: flex;
+        }
+        .stopka {
+            position: absolute;
+            bottom: 0px;
+            right: 20px;
+        }
+    </style>
 </head>
     <body>
         <h1 class="text-center">Pan Tadeusz, czyli ostatni zajazd na Litwie: historia szlachecka z roku 1811 i 1812 we dwunastu księgach wierzem.</h1>
+        <div class="general">
         <div class="list-group">
             <a class="list-group-item" href="./k1.html">Księga 1</a>
             <a class="list-group-item" href="./k2.html">Księga 2</a>
@@ -21,6 +47,13 @@
             <a class="list-group-item" href="./k10.html">Księga 10</a>
             <a class="list-group-item" href="./k11.html">Księga 11</a>
             <a class="list-group-item" href="./k12.html">Księga 12</a>
+        </div>
+        <div class="div-img-pan-tadeusz">
+            <img class="img-pan-tadeusz" src="p.t" class="img-fluid" alt="Responsive image">
+        </div>
+        </div>
+        <div class="stopka">
+            <p>Maciej Pustelnik ANS Nowy Targ</p>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     </body>
